One more z-index fix

--- a/less/base.less
+++ b/less/base.less
@@ -49,7 +49,7 @@ body {
     letter-spacing: 0.05em;
     text-align: center;
     white-space: nowrap;
-    z-index: 2;
+    z-index: 3;
 
     .greeting {
       position: relative;
